# MIA-CVD

./: .gitignore  LiRA.ipynb  MIA.ipynb  Untitled-1.py  classifiers.ipynb  docker-compose.yml  extract.ipynb  map_data_CDHADL.py  map_data_XNDL.py  pyproject.toml  query.py  test.py  thuduc.ipynb
config/: db_configs.py
notebooks/: classifiers.ipynb
scripts/: classifier.py  common.py
